--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^1.0.0",
-    "astro": "^1.2.5"
+    "astro": "^1.2.5",
+    "remark-directive": "^2.0.1"
   }
 }
