--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/rss": "^1.0.1",
     "@astrojs/sitemap": "^1.0.0",
     "astro": "^1.2.5",
     "remark-directive": "^2.0.1"
