Temporary removal of problem import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "paths": {
         "@head/*": ["src/components/Head/*"],
         "@content/*": ["src/components/Content/*"],
-        "@language/*": ["src/components/Language/*"]
+        "@language/*": ["src/components/Language/*"],
+        "@paging/*": ["src/components/Paging/*"],
       }
   }
 }
