--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "@content/*": ["src/components/Content/*"],
         "@language/*": ["src/components/Language/*"],
         "@paging/*": ["src/components/Paging/*"],
+        "@utilities/*": ["src/utilities/*"],
       }
   }
 }
