Search and authors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
       "baseUrl": ".",
       "paths": {
+        "@layouts/*": ["src/layouts/*"],
         "@head/*": ["src/components/Head/*"],
         "@content/*": ["src/components/Content/*"],
         "@language/*": ["src/components/Language/*"],
