Tired of mis-typing "@utilities". It's now "@util".

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "@head/*": ["src/components/Head/*"],
         "@content/*": ["src/components/Content/*"],
         "@paging/*": ["src/components/Paging/*"],
-        "@utilities/*": ["src/utilities/*"],
+        "@util/*": ["src/utilities/*"],
       }
   }
 }
