Compress JPG and PNG fallbacks

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "astro": "^1.2.5",
-    "remark-directive": "^2.0.1",
     "imagemin": "^8.0.1",
-    "imagemin-webp": "^7.0.0"
+    "imagemin-webp": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "remark-directive": "^2.0.1"
   }
 }
