Move image resizer into utils

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "node ./src/img.js && astro dev",
-    "start": "node ./src/img.js && astro dev",
-    "build": "node ./src/img.js && astro build",
-    "preview": "node ./src/img.js && astro preview",
+    "dev": "node ./src/utilities/img.js && astro dev",
+    "start": "node ./src/utilities/ && astro dev",
+    "build": "astro build",
+    "preview": "node ./src/utilities/ && astro preview",
     "astro": "astro"
   },
   "dependencies": {
