--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "img": "node ./src/utilities/img.js",
     "dev": "node ./src/utilities/img.js && astro dev",
-    "preview": "node ./src/utilities/ && astro preview",
+    "preview": "astro preview",
     "build": "astro build",
     "astro": "astro",
-    "test": "npx playwright test",
+    "test": "astro build && npx playwright test",
     "dts": "tsc ./tests/locate-content.js ./tests/locate-navigation.js ./tests/locate-search.js --allowJs --declaration --emitDeclarationOnly"
   },
   "dependencies": {
     "@squoosh/lib": "^0.4.0",
-    "astro": "^1.5.0",
+    "astro": "^1.6.0",
     "remark-directive": "^2.0.1"
   },
   "devDependencies": {
