--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1",
+  "version": "0.0.7",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -11,20 +11,6 @@
   "homepage": "https://astro.stevefenton.co.uk/",
   "bugs": "https://github.com/Steve-Fenton/astro-accelerator/issues",
   "license": "(Apache-2.0)",
-  "files": [
-    "src/pages/authors/[author]/[page].astro",
-    "src/pages/articles/[page].astro",
-    "src/pages/articles/feed.xml.ts",
-    "src/pages/category/[category]/[page].astro",
-    "src/pages/tag/[tag]/[page].astro",
-    "src/pages/search.json.ts",
-    "src/pages/sitemap.xml.ts",
-    "src/pages/report/*",
-    "src/layouts/*",
-    "src/themes/**/*",
-    "src/data/*",
-    "public/js/**/*"
-  ],
   "repository": {
     "url": "https://github.com/Steve-Fenton/astro-accelerator"
   },
@@ -48,5 +34,28 @@
   },
   "engines": {
     "node": "*"
-  }
+  },
+  "files": [
+    ".gitignore",
+    ".nprmc",
+    "env.d.ts",
+    "tsconfig.json",
+    "astro.config.mjs",
+    "src/config.ts",
+    "src/pages/index.md",
+    "src/pages/authors/[author]/[page].astro",
+    "src/pages/articles/[page].astro",
+    "src/pages/articles/feed.xml.ts",
+    "src/pages/category/[category]/[page].astro",
+    "src/pages/tag/[tag]/[page].astro",
+    "src/pages/search.json.ts",
+    "src/pages/sitemap.xml.ts",
+    "src/pages/report/*",
+    "src/layouts/*",
+    "src/themes/**/*",
+    "src/data/*",
+    "public/img/astro-lighthouse.png",
+    "public/css/**/*",
+    "public/js/**/*"
+  ]
 }
