--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.7",
+  "version": "0.0.8",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -37,7 +37,7 @@
   },
   "files": [
     ".gitignore",
-    ".nprmc",
+    ".npmrc",
     "env.d.ts",
     "tsconfig.json",
     "astro.config.mjs",
