--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.9",
+  "version": "0.0.10",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -42,11 +42,11 @@
     "astro.config.mjs",
     "src/config.ts",
     "src/pages/index.md",
-    "src/pages/authors/[author]/[page].astro",
-    "src/pages/articles/[page].astro",
+    "src/pages/authors/[[]author[]]/[[]page[]].astro",
+    "src/pages/articles/[[]page[]].astro",
     "src/pages/articles/feed.xml.ts",
-    "src/pages/category/[category]/[page].astro",
-    "src/pages/tag/[tag]/[page].astro",
+    "src/pages/category/[[]category[]]/[[]page[]].astro",
+    "src/pages/tag/[[]tag[]]/[[]page[]].astro",
     "src/pages/search.json.ts",
     "src/pages/sitemap.xml.ts",
     "src/pages/report/*",
