--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.10",
+  "version": "0.0.11",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -54,6 +54,7 @@
     "src/themes/**/*",
     "src/data/*",
     "public/img/astro-lighthouse.png",
+    "public/icons/**/*",
     "public/css/**/*",
     "public/js/**/*"
   ]
