--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.13",
+  "version": "0.0.17",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@squoosh/lib": "^0.4.0",
-    "astro": "^1.6.7",
+    "astro": "^1.6.6",
     "hast-util-from-selector": "^2.0.0",
     "remark-directive": "^2.0.1"
   },
@@ -40,6 +40,8 @@
     "env.d.ts",
     "tsconfig.json",
     "astro.config.mjs",
+    "sample/*",
+    "sample/**/*",
     "src/config.ts",
     "src/pages/index.md",
     "src/pages/search.md",
