--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.17",
+  "version": "0.0.18",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -47,9 +47,12 @@
     "src/pages/search.md",
     "src/pages/authors/[[]author[]]/[[]page[]].astro",
     "src/pages/articles/[[]page[]].astro",
+    "src/pages/articles/index.astro",
     "src/pages/articles/feed.xml.ts",
     "src/pages/category/[[]category[]]/[[]page[]].astro",
+    "src/pages/category/[[]category[]]/index.astro",
     "src/pages/tag/[[]tag[]]/[[]page[]].astro",
+    "src/pages/tag/[[]tag[]]/index.astro",
     "src/pages/search.json.ts",
     "src/pages/sitemap.xml.ts",
     "src/pages/report/*",
