--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,15 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
 # environment variables
 .env
 .env.production
 
-# macOS-specific files
+# MAC files
 .DS_Store
+
+# Other
 /test-results/
 /playwright-report/
 /playwright/.cache/
+.temp.*
