--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.65",
+  "version": "0.0.66",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -24,9 +24,10 @@
     "dts": "tsc ./tests/locate-content.js ./tests/locate-navigation.js ./tests/locate-search.js --allowJs --declaration --emitDeclarationOnly"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.17.0",
     "@squoosh/lib": "^0.4.0",
     "astro": "^2.0.13",
-    "astro-accelerator-utils": "^0.2.22",
+    "astro-accelerator-utils": "^0.2.23",
     "hast-util-from-selector": "^2.0.1",
     "remark-directive": "^2.0.1"
   },
