--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "dts": "tsc ./tests/locate-content.js ./tests/locate-navigation.js ./tests/locate-search.js --allowJs --declaration --emitDeclarationOnly"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.18.1",
-    "@squoosh/lib": "^0.5.3",
-    "astro": "^2.1.3",
+    "@astrojs/mdx": "^0.18.2",
+    "astro": "^2.1.7",
     "astro-accelerator-utils": "^0.2.23",
     "hast-util-from-selector": "^2.0.1",
-    "remark-directive": "^2.0.1"
+    "remark-directive": "^2.0.1",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.31.2"
