--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "astro": "^2.5.7",
     "astro-accelerator-utils": "^0.2.28",
     "hast-util-from-selector": "^2.0.1",
+    "html-to-text": "^9.0.5",
+    "keyword-extractor": "^0.0.25",
     "remark-directive": "^2.0.1",
     "sharp": "^0.32.1"
   },
