--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "img": "node --no-experimental-fetch ./src/themes/accelerator/utilities/img.mjs",
     "dev": "node --no-experimental-fetch ./src/themes/accelerator/utilities/img.mjs && astro dev",
+    "stats": "node --no-experimental-fetch ./src/themes/accelerator/utilities/stats.mjs",
     "test": "astro build && npx playwright install --with-deps && npx playwright test",
     "build": "astro build",
     "preview": "astro preview",
@@ -26,7 +27,8 @@
   "dependencies": {
     "@astrojs/mdx": "^0.19.7",
     "astro": "^2.7.2",
-    "astro-accelerator-utils": "^0.2.37",
+    "astro-accelerator-utils": "^0.2.38",
+    "csv": "^6.3.1",
     "hast-util-from-selector": "^2.0.1",
     "html-to-text": "^9.0.5",
     "keyword-extractor": "^0.0.25",
