--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "themes"
   ],
   "type": "module",
+  "packageManager": "pnpm@8.7.0",
   "homepage": "https://astro.stevefenton.co.uk/",
   "bugs": "https://github.com/Steve-Fenton/astro-accelerator/issues",
   "license": "(Apache-2.0)",
