--- a/.github/workflows/build-astro.yml
+++ b/.github/workflows/build-astro.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
+          version: 8.6.12
           run_install: false
 
       - name: Get pnpm store directory
