The Astro action can set up PNPM

--- a/.github/workflows/build-astro.yml
+++ b/.github/workflows/build-astro.yml
@@ -26,25 +26,6 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8.7.0
-          run_install: false
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-  
       - name: Check Licenses
         run: npx license-checker --out ./public/downloads/licenses.csv --csv --onlyAllow "0BSD;BSD-2-Clause;BSD-3-Clause;CC-BY-4.0;ISC;MIT;Apache-2.0;UNLICENSED"
 
@@ -53,6 +34,9 @@ jobs:
 
       - name: Astro Build
         uses: withastro/action@v0
+        with:
+          package-manager: pnpm
+          pnpm-version: 8.7.0
 
   test:
     timeout-minutes: 60
@@ -90,6 +74,9 @@ jobs:
 
       - name: Prepare server
         run: pnpm build
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
       - name: Run Playwright tests
         run: npx playwright test
