--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "version": "0.3.1",
+  "version": "0.3.2",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
-  "keywords": ["astro","themes"],
+  "keywords": [
+    "astro",
+    "themes"
+  ],
   "type": "module",
   "packageManager": "pnpm@8.7.0",
   "engines": {
@@ -28,7 +31,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^1.0.0",
-    "astro": "^3.0.0",
+    "astro": "^3.0.3",
     "astro-accelerator-utils": "^0.2.39",
     "csv": "^6.3.3",
     "hast-util-from-selector": "^3.0.0",
@@ -38,7 +41,7 @@
     "sharp": "^0.32.5"
   },
   "devDependencies": {
-    "@playwright/test": "^1.36.2"
+    "@playwright/test": "^1.37.1"
   },
   "files": [
     ".npmrc",
