Initial Front Matter CMS config.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "img": "node --no-experimental-fetch ./src/themes/accelerator/utilities/img.mjs",
     "dev": "node --no-experimental-fetch ./src/themes/accelerator/utilities/img.mjs && astro dev",
     "stats": "node --no-experimental-fetch ./src/themes/accelerator/utilities/stats.mjs",
+    "spellcheck": "git fetch origin main:refs/remotes/origin/main && git diff origin/main --name-only --diff-filter=ACMRTUXB | cspell --no-must-find-files --file-list stdin",
     "test": "astro build && npx playwright install --with-deps && npx playwright test",
     "build": "astro build",
     "preview": "astro preview",
@@ -33,6 +34,7 @@
     "@astrojs/mdx": "^1.1.1",
     "astro": "^3.2.4",
     "astro-accelerator-utils": "^0.3.2",
+    "cspell": "^7.3.7",
     "csv": "^6.3.5",
     "hast-util-from-selector": "^3.0.0",
     "html-to-text": "^9.0.5",
