--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "4.0.2",
+  "version": "4.0.5",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -67,12 +67,14 @@
     "src/pages/sitemap.xml.ts",
     "src/pages/report/*",
     "src/layouts/*",
-    "src/themes/**/*",
+    "src/themes/accelerator/components/*",
+    "src/themes/accelerator/layouts/*",
+    "src/themes/accelerator/utilities/*",
     "src/data/*",
     "public/img/astro-lighthouse.png",
     "public/icons/**/*",
-    "public/css/**/*",
-    "public/js/**/*"
+    "public/css/*",
+    "public/js/*"
   ],
   "pnpm": {
     "overrides": {
