--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "4.0.9",
+  "version": "4.0.10",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -55,14 +55,13 @@
     "src/config.ts",
     "src/pages/index.md",
     "src/pages/search.md",
-    "src/pages/authors/[[]author[]]/[[]page[]].astro",
-    "src/pages/articles/[[]page[]].astro",
-    "src/pages/articles/index.astro",
-    "src/pages/articles/feed.xml.ts",
-    "src/pages/category/[[]category[]]/[[]page[]].astro",
-    "src/pages/category/[[]category[]]/index.astro",
-    "src/pages/tag/[[]tag[]]/[[]page[]].astro",
-    "src/pages/tag/[[]tag[]]/index.astro",
+    "src/pages/articles/*.astro",
+    "src/pages/articles/*.ts",
+    "src/pages/authors/**/*.astro",
+    "src/pages/category/**/*.astro",
+    "src/pages/category/**/*.astro",
+    "src/pages/tag/**/*.astro",
+    "src/pages/tag/**/*.astro",
     "src/pages/search.json.ts",
     "src/pages/sitemap.xml.ts",
     "src/pages/report/*",
