--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "4.0.10",
+  "version": "4.0.11",
   "author": "Steve Fenton",
   "name": "astro-accelerator",
   "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -39,6 +39,7 @@
     "hast-util-from-selector": "^3.0.0",
     "html-to-text": "^9.0.5",
     "keyword-extractor": "^0.0.28",
+    "optional": "^0.1.4",
     "remark-directive": "^3.0.0",
     "sharp": "^0.33.2"
   },
