--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "4.0.31",
+    "version": "4.0.32",
     "author": "Steve Fenton",
     "name": "astro-accelerator",
     "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -66,6 +66,7 @@
         "src/pages/search.json.ts",
         "src/pages/sitemap.xml.ts",
         "src/pages/report/*",
+        "src/pages/report/oldest-content/*",
         "src/layouts/*",
         "src/themes/accelerator/components/*",
         "src/themes/accelerator/layouts/*",
