--- a/.github/workflows/build-astro.yml
+++ b/.github/workflows/build-astro.yml
@@ -80,12 +80,9 @@ jobs:
               run: npx playwright test
 
             - name: Publish if version has been updated
-              uses: pascalgn/npm-publish-action@1.3.9
-              with: # All of theses inputs are optional
-                  commit_pattern: "^Release (\\S+)"
-              env: # More info about the environment variables in the README
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
-                  NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # You need to set this in your repo settings
+              uses: JS-DevTools/npm-publish@v3
+              with:
+                  token: ${{ secrets.NPM_AUTH_TOKEN }}
 
     deploy:
         needs:
