--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "4.0.46",
+    "version": "4.0.47",
     "author": "Steve Fenton",
     "name": "astro-accelerator",
     "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -36,6 +36,7 @@
         "astro-accelerator-utils": "^0.3.17",
         "cspell": "^8.14.2",
         "csv": "^6.3.10",
+        "glob": "^11.0.0",
         "hast-util-from-selector": "^3.0.0",
         "html-to-text": "^9.0.5",
         "keyword-extractor": "^0.0.28",
