--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,13 @@
 {
-  "recommendations": [
-    "astro-build.astro-vscode",
-    "esbenp.prettier-vscode",
-    "yzhang.markdown-all-in-one",
-    "ms-playwright.playwright",
-    "streetsidesoftware.code-spell-checker",
-    "unifiedjs.vscode-mdx"
-  ],
-  "unwantedRecommendations": []
+    "recommendations": [
+        "astro-build.astro-vscode",
+        "esbenp.prettier-vscode",
+        "yzhang.markdown-all-in-one",
+        "docsmsft.docs-markdown",
+        "ms-playwright.playwright",
+        "streetsidesoftware.code-spell-checker",
+        "unifiedjs.vscode-mdx",
+        "DavidAnson.vscode-markdownlint"
+    ],
+    "unwantedRecommendations": []
 }
