Move crawl to linkinator

--- a/.github/workflows/build-astro.yml
+++ b/.github/workflows/build-astro.yml
@@ -72,6 +72,7 @@ jobs:
 
             - name: Prepare server
               run: pnpm build
+              run: pnpm crawl
 
             - name: Install Playwright Browsers
               run: npx playwright install --with-deps
