--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "5.9.15",
+    "version": "5.9.16",
     "author": "Steve Fenton",
     "name": "astro-accelerator",
     "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -61,6 +61,7 @@
         "src/pages/404.md",
         "src/pages/index.md",
         "src/pages/search.md",
+        "src/pages/rss.xml.ts",
         "src/pages/articles/*.astro",
         "src/pages/articles/*.ts",
         "src/pages/authors/**/*.astro",
