--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "@astrojs/mdx": "^4.3.3",
+        "@img/sharp-linux-x64": "^0.34.3",
         "astro": "^5.12.9",
         "astro-accelerator-utils": "^0.3.50",
         "cspell": "^8.19.4",
