--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,9 @@
     "trailingComma": "es5",
     "tabWidth": 4,
     "singleQuote": true,
-    "insertPragma": true
+    "insertPragma": true,
+    "printWidth": 120,
+    "bracketSameLine": true,
+    "arrowParens": "avoid",
+    "bracketSpacing": true
 }
