--- a/.github/workflows/build-astro.yml
+++ b/.github/workflows/build-astro.yml
@@ -19,6 +19,7 @@ permissions:
 jobs:
     build:
         runs-on: ubuntu-latest
+        container: mcr.microsoft.com/playwright:v1.40.0-focal
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -74,11 +75,6 @@ jobs:
               run: |
                   pnpm build
                   pnpm crawl
-
-            - name: Install Playwright
-              uses: microsoft/playwright-github-action@v1
-              with:
-                  browsers: chromium
 
             - name: Run Playwright tests
               run: npx playwright test
