--- a/.github/workflows/build-astro.yml
+++ b/.github/workflows/build-astro.yml
@@ -19,7 +19,6 @@ permissions:
 jobs:
     build:
         runs-on: ubuntu-latest
-        container: mcr.microsoft.com/playwright:v1.40.0-focal
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -75,6 +74,12 @@ jobs:
               run: |
                   pnpm build
                   pnpm crawl
+
+            - name: Install Playwright Browsers
+              run: |
+                  npx playwright install chromium
+                  sudo apt-get update
+                  sudo apt-get install -y libnss3 libatk-bridge2.0-0 libdrm2 libxcomposite1 libxdamage1 libxrandr2 libgbm1
 
             - name: Run Playwright tests
               run: npx playwright test
