--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "hast-util-from-selector": "^3.0.1",
         "html-to-text": "^9.0.5",
         "keyword-extractor": "^0.0.28",
-        "linkinator": "^7.5.0",
+        "linkinator": "7.0.0",
         "optional": "^0.1.4",
         "remark-directive": "^4.0.0",
         "sharp": "^0.34.5"
