--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "5.11.0",
+    "version": "5.11.1",
     "author": "Steve Fenton",
     "name": "astro-accelerator",
     "description": "A super-lightweight, accessible, SEO-friendly starter project for Astro",
@@ -60,6 +60,7 @@
         "sample/*",
         "sample/**/*",
         "src/config.ts",
+        "src/content/config.ts",
         "src/pages/404.md",
         "src/pages/index.md",
         "src/pages/search.md",
